# tsg_indexer

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md
.cargo/: config.toml
examples/: dynamic_tsg_gen.rs  test_dart.dart  test_javascript.js  test_lua.lua  test_python.py  test_rust.rs  test_scala.scala  test_swift.swift
languages/tree-sitter-stack-graphs-bash/src/: builtins.cfg  builtins.sh  stack-graphs.tsg
languages/tree-sitter-stack-graphs-csharp/src/: builtins.cfg  builtins.cs  stack-graphs.tsg
languages/tree-sitter-stack-graphs-css/src/: builtins.cfg  builtins.css  stack-graphs.tsg
languages/tree-sitter-stack-graphs-dart/src/: builtins.cfg  builtins.dart  stack-graphs.tsg
languages/tree-sitter-stack-graphs-go/src/: builtins.cfg  builtins.go  stack-graphs.tsg
languages/tree-sitter-stack-graphs-html/src/: builtins.cfg  builtins.html  stack-graphs.tsg
languages/tree-sitter-stack-graphs-json/src/: builtins.cfg  builtins.json  stack-graphs.tsg
languages/tree-sitter-stack-graphs-lua/src/: builtins.cfg  builtins.lua  stack-graphs.tsg
languages/tree-sitter-stack-graphs-markdown/src/: builtins.cfg  builtins.md  stack-graphs.tsg
languages/tree-sitter-stack-graphs-objc/src/: builtins.cfg  builtins.m  stack-graphs.tsg
languages/tree-sitter-stack-graphs-php/src/: builtins.cfg  builtins.php  stack-graphs.tsg
languages/tree-sitter-stack-graphs-ruby/src/: builtins.cfg  builtins.rb  stack-graphs.tsg
languages/tree-sitter-stack-graphs-rust/src/: builtins.cfg  builtins.rs  stack-graphs.tsg
languages/tree-sitter-stack-graphs-scala/src/: builtins.cfg  builtins.scala  stack-graphs.tsg
languages/tree-sitter-stack-graphs-swift/src/: builtins.cfg  builtins.swift  stack-graphs.tsg
languages/tree-sitter-stack-graphs-xml/src/: builtins.cfg  builtins.xml  stack-graphs.tsg
src/: indexer.rs  languages.rs  lib.rs  output.rs  tsg_generator.rs
(+6 files in other folders)
